adding text-style

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1 style="font=sans serif;">Hello World</h1>
-<p>Welcome to github pages</p>
+<h1 style="font-family:sans serif;">Hello World</h1>
+<p style="font-family:"Mono">Welcome to github pages</p>
